ingress-controller/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-nginx-deployment
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      run: model-nginx
  replicas: 1
  template:
    metadata:
      labels:
        run: model-nginx
    spec:
      containers:
      - name: model-nginx
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: model-nginx-service
  namespace: ingress-nginx
  labels:
    run: model-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: model-nginx
